--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
           <nav>
             <a href="{{ site.baseurl }}/blog">Blog</a>
             <a href="{{ site.baseurl }}/projects">Projects</a>
-            <a href="{{ site.baseurl }}/geekery">Geekery</a>
+            <a href="{{ site.baseurl }}/geekposts">Geekery</a>
           </nav>
         </header>
       </div>
