Changed colour settings in scss

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -5,6 +5,8 @@
 
 // Colors
 $blue: #4183C4;
+$green: #7A8E02;
+$brown: #AC7E02
 
 // Grays
 $black: #000;
@@ -13,6 +15,8 @@ $darkGray: #333;
 $gray: #666;
 $lightGray: #eee;
 $white: #fff;
+
+
 
 // Font stacks
 $helvetica: Helvetica, Arial, sans-serif;
