--- a/style.scss
+++ b/style.scss
@@ -30,6 +30,12 @@ body {
   width: 100%;
 }
 
+//Change to superscript
+
+sup {
+  font-size: 50%
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
   color: $darkerGray;
