--- a/style.scss
+++ b/style.scss
@@ -33,7 +33,8 @@ body {
 //Change to superscript
 
 sup {
-  font-size: 50%
+  font-size: 50%;
+  vertical-align: top;
 }
 
 h1, h2, h3, h4, h5, h6 {
