Change to superscript

--- a/style.scss
+++ b/style.scss
@@ -33,8 +33,9 @@ body {
 //Change to superscript
 
 sup {
-  font-size: 50%;
+  font-size: 75%;
   vertical-align: super;
+  margin-left: 2px;
 }
 
 h1, h2, h3, h4, h5, h6 {
