--- a/style.scss
+++ b/style.scss
@@ -121,28 +121,8 @@ sup {
 
 //Change to blockquote
 
-blockquote {
+blockquote p {
   font-size: 14px;
-}
-
-blockquote::before{
-  content: "\201C"; /*Unicode for Left Double Quote*/
-  
-  /*Font*/
-  font-family: Georgia, serif;
-  font-size: 60px;
-  font-weight: bold;
-  color: #999;
-  
-  /*Positioning*/
-  position: absolute;
-  left: 10px;
-  top:5px;
-}
-
-blockquote::after{
-  /*Reset to make sure*/
-  content: "";
 }
 
 
